# pydubins

./: .gitignore  CMakeLists.txt  README.rst  setup.py
dubins/include/: dubins.hpp
dubins/src/: dubins.cpp  dubins_pybind.cpp
